--- a/index.html
+++ b/index.html
@@ -3,12 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BOOK LIST</title>
+
+    <style>
+        h1{
+            text-align: center;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            color: rgb(16, 237, 237);
+            font-style: italic;
+        }
+        h3{
+            text-align: center;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: rgb(52, 28, 74);
+            font-style: italic;
+        }
+        input{
+           border-radius: 5px;
+           margin-left: 2%;
+           margin-top: 10%;
+           
+        }
+        lable{
+            margin-left: 35%;
+           margin-top: 10%;
+        }
+        button{
+            margin-left: 55%;
+           margin-top: 5%;
+           background-image: linear-gradient(to right,rgb(250, 92, 92), rgb(248, 122, 143), rgb(253, 129, 253));
+
+        }
+
+    </style>
+
 </head>
 <body>
 
-    <h1> </h1>
+    <h1> "ICE AND FIRE" </h1>
+    <h3>Online Library for you!!</h3>
     <script src="./script.js"></script>
-    
+    <p class="res"></p>
 </body>
 </html>
